Kubernetes/Lab.RateMyBeer.Frontend.Api/base/deplyement-frontendapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-ratemybeer-frontend-api
spec:
  selector:
    matchLabels:
      app: lab-ratemybeer-frontend-api
  template:
    metadata:
      labels:
        app: lab-ratemybeer-frontend-api
    spec:
      containers:
      - name: lab-ratemybeer-frontend-api
        image: ratemybeercontainer.azurecr.io/frontendapi:dev
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
